# promptcraft

./: .gitignore  APP.md  CLAUDE.md  README.md  TESTING.md  pyproject.toml  run_tests.py
.ai/: debug-log.md
.bmad-core/: install-manifest.yaml
.bmad-core/tasks/: create-next-story.md
.github/workflows/: test-coverage.yml
docs/: architecture.md  brief.md  front-end-spec.md  prd.md
docs/architecture/: architectural-patterns.md  authentication-and-authorization.md  authentication-service.md  backend-api-service.md  backend-error-handling.md  change-log.md  cicd-pipeline.md  cli-agent.md  component-architecture.md  component-diagrams.md  critical-fullstack-rules.md  database-architecture.md  deployment-strategy.md  environment-configuration.md  environments.md  error-flow.md  error-response-format.md  frontend-error-handling.md  frontend-services-layer.md  full-stack-architecture-completion-summary.md  github-oauth-api.md  high-level-architecture-diagram.md  index.md  key-metrics.md  local-development-setup.md  monitoring-stack.md  naming-conventions.md  performance-optimization.md  platform-and-infrastructure-choice.md  repository-structure.md  rest-api-specification.md  routing-architecture.md  security-requirements.md  service-architecture.md  starter-template-or-existing-project.md  state-management-architecture.md  team.md  technical-summary.md  technology-stack-table.md  template-sync-engine.md  (+6 more)
docs/prd/: checklist-results-report.md  epic-1-foundation-core-command-processing.md  epic-2-cli-interface-user-experience.md  epic-3-cross-platform-integration-distribution.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/qa/assessments/: 1.2-risk-20250901.md  1.2-test-design-20250901.md  1.3-risk-20250901.md  1.3-test-design-20250901.md  1.4-risk-20250901.md  1.4-test-design-20250901.md  1.5-risk-20250901.md  1.5-test-design-20250901.md  2.1-risk-20250901.md  2.1-test-design-20250901.md  2.2-risk-20250901.md  2.2-test-design-20250901.md
docs/qa/gates/: 1.1-project-structure-and-development-environment.yml  1.2-custom-exception-classes.yml  1.3-command-template-discovery.yml  1.4-template-processing-and-argument-substitution.yml  1.5-integrated-command-processing-pipeline.yml  2.1-basic-cli-framework-and-command-execution.yml  2.2-error-handling-and-user-feedback.yml  3.5-documentation-and-user-guide.yml
docs/stories/: 1.1.project-structure-and-development-environment.md  1.2.custom-exception-classes.md  1.3.command-template-discovery.md  1.4.template-processing-and-argument-substitution.md  1.5.integrated-command-processing-pipeline.md  2.1.basic-cli-framework-and-command-execution.md  2.2.error-handling-and-user-feedback.md  3.5.documentation-and-user-guide.md
src/promptcraft/: __init__.py  core.py  exceptions.py  main.py
tests/unit/: test_cli_integration.py  test_clipboard_enhanced.py  test_core.py  test_cross_platform_paths.py  test_documentation.py  test_exceptions.py  test_filesystem_interactions.py  test_main.py  test_template_discovery.py
